5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1671_1104.log
== TEST (2019-04-24 13:03:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("variavel a: "))
b = float(input("variavel b: "))
c = float(input("variavel c: "))
d = float(input("variavel d: "))

print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",a,",",b)

if not((b > a) and (d > c)):	
-- ERROR:
File "XXXX", line 13
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:06:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("variavel a: "))
b = float(input("variavel b: "))
c = float(input("variavel c: "))
d = float(input("variavel d: "))

print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",a,",",b)

if not((b > a) and (d > c)):
	print("Entradas invalidas")
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  1.0 , 2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:06:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("variavel a: "))
b = float(input("variavel b: "))
c = float(input("variavel c: "))
d = float(input("variavel d: "))

print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",a,",",b)

if not((b > a) and (d > c)):
	print("Entradas invalidas")
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  1.0 , 2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:18:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("variavel a: "))
b = float(input("variavel b: "))
c = float(input("variavel c: "))
d = float(input("variavel d: "))

print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)

if not((b > a) and (d > c)):
	print("Entradas invalidas")
elif ((a < c) and (b > d)) or ((a > c) and (b < d)) or ((a == c) and (b == d)):
	print("Ha intersecao")
else:
	print("Nao ha intersecao")
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:18:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("variavel a: "))
b = float(input("variavel b: "))
c = float(input("variavel c: "))
d = float(input("variavel d: "))

print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)

if not((b > a) and (d > c)):
	print("Entradas invalidas")
elif ((a < c) and (b > d)) or ((a > c) and (b < d)) or ((a == c) and (b == d)):
	print("Ha intersecao")
else:
	print("Nao ha intersecao")
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:19:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("variavel a: "))
b = float(input("variavel b: "))
c = float(input("variavel c: "))
d = float(input("variavel d: "))

print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)

if not((b > a) and (d > c)):
	print("Entradas invalidas")
elif ((a < c) and (b > d)) or ((a > c) and (b < d)) or ((a == c) and (b == d)):
	print("Ha intersecao")
else:
	print("Nao ha intersecao")
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 13:19:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("variavel a: "))
b = float(input("variavel b: "))
c = float(input("variavel c: "))
d = float(input("variavel d: "))

print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)

if not((b > a) and (d > c)):
	print("Entradas invalidas")
elif ((a < c) and (b > d)) or ((a > c) and (b < d)) or ((a == c) and (b == d)):
	print("Ha intersecao")
else:
	print("Nao ha intersecao")
-- EXECUTION TIME:
0.214358
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Entradas invalidas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
